fix container being too narrow

--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 /* Colors: DRACULA (https://github.com/dracula/dracula-theme) */
 
 @media screen and (min-width: 320px) { #container { width: 100%; } }
-@media screen and (min-width: 480px) { #container { width: 80%; } }
-@media screen and (min-width: 720px) { #container { width: 70%; } }
-@media screen and (min-width: 960px) { #container { width: 60%; } }
-@media screen and (min-width: 1080px) { #container { width: 50%; } }
+@media screen and (min-width: 480px) { #container { width: 90%; } }
+@media screen and (min-width: 720px) { #container { width: 80%; } }
+@media screen and (min-width: 960px) { #container { width: 70%; } }
+@media screen and (min-width: 1080px) { #container { width: 60%; } }
 
 ::-webkit-scrollbar {
 	display: none;
